--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(Step_Leg_Control)
+project(SLC)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -105,7 +105,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES Step_Leg_Control
+#  LIBRARIES SLC
 #  CATKIN_DEPENDS can_plugins roscpp sensor_msgs std_msgs
 #  DEPENDS system_lib
 )
@@ -123,7 +123,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/Step_Leg_Control.cpp
+#   src/${PROJECT_NAME}/SLC.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -134,7 +134,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/Step_Leg_Control_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/SLC_node.cpp)
 
 add_executable(SLC3_node src/SLC3.cpp)
 add_executable(SLC4_node src/SLC4.cpp)
@@ -204,7 +204,7 @@ target_link_libraries(SLC4_node ${catkin_LIBRARIES})
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_Step_Leg_Control.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_SLC.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
