--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>Step_Leg_Control</name>
+  <name>SLC</name>
   <version>0.0.0</version>
-  <description>The Step_Leg_Control package</description>
+  <description>The SLC package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/Step_Leg_Control</url> -->
+  <!-- <url type="website">http://wiki.ros.org/SLC</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
